--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,27 +1,6 @@
 {
     "version": "0.2.0",
     "configurations": [
-
-    {
-        "name": ".NET Core Launch (web)",
-        "type": "coreclr",
-        "request": "launch",
-        "preLaunchTask": "build",
-        "program": "C:/Users/Mark/.dotnet/tools/dotnet-lambda-test-tool-3.1.exe",
-        "args": [],
-        "cwd": "${workspaceFolder}",
-        "stopAtEntry": false,
-        "serverReadyAction": {
-            "action": "openExternally",
-            "pattern": "\\bNow listening on:\\s+(https?://\\S+)"
-        },
-        "env": {
-            "ASPNETCORE_ENVIRONMENT": "Development"
-        },
-        "sourceFileMap": {
-            "/Views": "${workspaceFolder}/Views"
-        }
-    },
         {
             // Use IntelliSense to find out which attributes exist for C# debugging
             // Use hover for the description of the existing attributes
@@ -29,7 +8,7 @@
             "name": ".NET Core Launch (web)",
             "type": "coreclr",
             "request": "launch",
-            "preLaunchTask": "build",
+            "preLaunchTask": "",
             // If you have changed target frameworks, make sure to update the program path.
             "program": "${workspaceFolder}/src/srtest/bin/Debug/netcoreapp3.1/srtest.dll",
             "args": [],
